Fixes: - Better formatting of project boxes (git stuff and button always aligned in everybox) - Added transparency as part of the hover animation on buttons and social media icons

--- a/styles/large.css
+++ b/styles/large.css
@@ -189,6 +189,7 @@ footer .some-bar {
 }
 
 #home-projects-header {
+    width: 65%;
     margin-left: -35px;
 }
 
